@@ -1,6 +1,7 @@
 This file documents the revision history for Perl extension Catalyst.
 
 5.66
+        - Added Test::WWW::Mechanize::Catalyst support
         - Cleaned generated tests
 	- Change redirect to use a 301, not a 302
         - Added Root controller concept
